--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^5.0.8",
     "ecored-base-pkg": "5.3.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
